--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -33,10 +33,8 @@
 
 .cellContent { cursor: default; border-radius: 4px; }
 .cellContent {
-	.iconObject { margin-right: 4px; vertical-align: top; }
+	.iconObject { margin-right: 4px; vertical-align: top; flex-shrink: 0; }
 	.name { display: inline-block; vertical-align: top; }
-	div.name:empty { display: none; }
-	span:empty { display: none; }
 	.empty { color: $colorDarkGrey; display: none; }
 }
 
@@ -53,13 +51,13 @@
 .cellContent.c-object {
 	.element { display: inline-block; margin: 0px 8px 2px 0px; vertical-align: top; max-width: 100%; line-height: 20px; white-space: nowrap; cursor: pointer; }
 	.element {
-		.iconObject { flex-shrink: 0; }
 		.name { line-height: 20px; width: 100%; @include text-overflow-nw; }
 	}
 }
 
+.cellContent.isName { display: flex; }
 .cellContent.isName {
-	.name { line-height: 20px; @include text-overflow-nw; width: calc(100% - 24px); }
+	.name { line-height: 20px; @include text-overflow-nw; width: 100%; }
 }
 
 .cellContent.c-link {
