--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -31,12 +31,6 @@
 			tbody { border-top: 1px solid #e0ded2; }
 
 			.cellContent { width: 100%; overflow: hidden; height: 20px; line-height: 20px; }
-			.cellContent.isName {
-				.icon.expand { 
-					display: block; position: absolute; right: 2px; top: 2px; opacity: 0; width: 38px; height: calc(100% - 4px);
-					background-size: 20px 20px; background-position: 9px 12px; background-color: rgba(255,255,255,0.75);
-				}
-			}
 
 			.cell.c-object, .cell.c-file { padding-right: 0px; }
 			.cellContent.c-object, .cellContent.c-select, .cellContent.c-file {
@@ -45,7 +39,7 @@
 
 			tr.active {
 				.cellContent.isName {
-					.icon.expand { opacity: 1; }
+					.icon.expand { display: block; }
 				}
 			}
 				
