--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -57,6 +57,7 @@
 
 .cellContent.isName { display: flex; }
 .cellContent.isName {
+	.iconObject { z-index: 1; cursor: pointer; }
 	.name { line-height: 20px; @include text-overflow-nw; width: 100%; }
 }
 
