--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -27,7 +27,8 @@
 			}
 		}
 
-		.cell { @include text-common; width: calc(100% - 216px); position: relative; padding: 5px 8px; }
+		.cell { @include text-common; width: calc(100% - 216px); position: relative; padding: 5px 8px; border-radius: 4px; transition: background 0.2s ease-in-out; }
+		.cell:hover { background: rgba(172,169,150,0.15); }
 		
 		.cell.c-select { padding: 7px 8px 0px 8px; }
 
