--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -112,7 +112,8 @@
 			.info { height: 32px; padding: 6px 6px 6px 2px; border-radius: 4px; transition: background 0.2s ease-in-out; flex-shrink: 0; }
 			.info:hover { background: rgba(172,169,150,0.15); }
 
-			.cell { padding: 5px 8px; margin-right: 6px; width: calc(100% - 218px); }
+			.cell { padding: 5px 8px; margin-right: 6px; border-radius: 4px; width: calc(100% - 218px); transition: background 0.2s ease-in-out; }
+			.cell:hover { background: rgba(172,169,150,0.15); }
 			.cell.c-longText.isEditing {
 				.cellContent { padding: 5px 8px !important; }
 			}
