CU-fk3mm7: Fix styles

--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -10,7 +10,7 @@
 	.menu * { user-select: none; }
 	
 	.menu { 
-		border-radius: 8px; position: absolute; z-index: inherit; text-align: left; 
+		border-radius: 8px; position: absolute; z-index: inherit; text-align: left; backface-visibility: hidden;
 		box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2); background: #fff; opacity: 0; transform: scale3d(0.8,0.8,1);
 		transition: opacity 0.05s ease-in-out, transform 0.05s ease-in-out;
 	}
