--- a/src/scss/menu/block/context.scss
+++ b/src/scss/menu/block/context.scss
@@ -3,8 +3,10 @@
 .menus {
 	.menu.menuBlockContext { padding: 0px; height: 44px; transform-origin: 50% 50% !important; }
 	.menu.menuBlockContext {
-		.icon { vertical-align: top; }
-		.icon.blockStyle { width: 32px; background-size: 20px 20px; background-position: 0px center; }
+		.section { padding: 6px 12px; }
+		.icon { width: 32px; height: 32px; background-size: 20px 20px; vertical-align: top; margin: 0px; border-radius: 4px; }
+		.icon:hover { background-color: #f3f2ec; }
+		.icon.blockStyle { width: 32px; background-position: 0px center; }
 		
 		.icon.blockStyle.active.text { background-image: url('~img/icon/menu/style/text.svg'); }
 		.icon.blockStyle.active.header1 { background-image: url('~img/icon/menu/style/header1.svg'); }
