CU-fh326u: Icons, order and captions

--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -45,6 +45,7 @@
 		.icon.rename { background-image: url('~img/icon/menu/action/rename0.svg'); }
 		.icon.replace { background-image: url('~img/icon/menu/action/replace0.svg'); }
 		.icon.add { background-image: url('~img/icon/menu/action/add0.svg'); }
+		.icon.object { background-image: url('~img/icon/menu/action/object0.svg'); }
 		
 		.icon.undo { background-image: url('~img/icon/menu/action/undo0.svg'); }
 		.icon.redo { background-image: url('~img/icon/menu/action/redo0.svg'); }
@@ -56,7 +57,7 @@
 		.icon.clock { background-image: url('~img/icon/menu/action/clock0.svg'); }
 		.icon.settings { background-image: url('~img/icon/menu/action/settings0.svg'); }
 		.icon.expand { background-image: url('~img/icon/menu/action/expand0.svg'); }
-		
+
 		.icon.align.left { background-image: url('~img/icon/menu/align/left.svg'); }
 		.icon.align.center { background-image: url('~img/icon/menu/align/center.svg'); }
 		.icon.align.right { background-image: url('~img/icon/menu/align/right.svg'); }
