--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -11,7 +11,9 @@
 			width: 12px; height: 100%; background-size: 8px 16px; opacity: 0; cursor: grab; position: absolute; right: 6px; top: 0px;
 			background-image: url('~img/icon/block/menu0.svg'); border: 1px solid $colorLightGrey; border-radius: 12px; 
 		}
-		.icon.dnd:hover { background-image: url('~img/icon/block/menu2.svg') !important; border-color: $colorOrange; }
+		.icon.dnd:hover { 
+			background-image: url('~img/icon/block/menu2.svg') !important; border-color: $colorOrange; box-shadow: 0px 0px 0px 1px $colorOrange;
+		}
 		
 		.colResize { width: 0px; position: relative; opacity: 0; z-index: 10; }
 		.colResize.active { opacity: 1; }
