--- a/src/scss/menu/search/object.scss
+++ b/src/scss/menu/search/object.scss
@@ -19,7 +19,7 @@
 		.empty { height: 100%; line-height: 228px; padding: 16px; text-align: center; }
 		.empty {
 			b { display: block; font-weight: 400; color: $colorBlack; }
-			span { @include text-overflow-nw; max-width: 100%; display: inline-block; }
+			span { @include text-overflow-nw; max-width: 100%; display: block; }
 			.label { width: 100%; line-height: 24px; color: $colorDarkGrey; display: inline-block; vertical-align: middle; }
 		}
 	}
