--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -123,6 +123,7 @@ search.active { background: orange !important; }
 .dropTarget.targetTop.isOver.top { box-shadow: 0px -2px 0px $colorOrange inset; }
 .dropTarget.targetBot.isOver.bottom { box-shadow: 0px 2px 0px $colorOrange inset; }
 
+.textColor-default { color: $colorBlack !important; }
 .textColor-black { color: $colorBlack !important; }
 .textColor-grey { color: $colorDarkGrey !important; }
 .textColor-yellow { color: $colorYellow !important; }
