--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -92,8 +92,12 @@
 			.textarea { border-radius: 4px; padding: 20px 24px; color: $colorIce; filter: blur(3px); }
 			.textarea:focus { filter: blur(0px); }
 
-			.inputs { margin-bottom: 16px; }
+			.path { margin-bottom: 16px; }
+			.path .label { margin: 0px; }
+
 			canvas { display: block; }
+
+			.inputs { margin-bottom: 16px; }
 			.buttons { margin-top: 32px; }
 		}
 		
