--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -96,7 +96,7 @@
 			.path { 
 				b { margin-bottom: 5px; display: block; }
 				.label { margin: 0px; }
-				.side { width: 100%; line-height: 128px; }
+				.side { width: 100%; }
 				.side.right { text-align: right; font-size: 0px; }
 				canvas { display: inline-block; }
 			}
