--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -29,6 +29,10 @@
 	.icon.clear:hover { background-image: url('~img/icon/clear1.svg'); }
 }
 
+.cell.isEditing.c-select {
+	.over { display: inline-block; width: calc(100% - 30px); }
+}
+
 .cell.isEditing.c-object, .cell.isEditing.c-select {
 	.cellContent { height: 20px !important; padding-right: 1px !important; }
 }
