--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -114,16 +114,20 @@
 
 			.cell { padding: 5px 8px; margin-right: 6px; border-radius: 4px; width: calc(100% - 218px); transition: background 0.2s ease-in-out; }
 			.cell:hover { background: rgba(172,169,150,0.15); }
-			.cell.c-longText.isEditing {
-				.cellContent { padding: 5px 8px !important; }
-			}
 
+			.cellContent {
+				.input { height: 22px; line-height: 22px; }
+			}
+			
 			.cellContent.c-shortText, .cellContent.c-longText {
 				.name, span { width: 100%; word-break: break-word; }
 			}
 
 			.cellContent.c-longText {
 				.name, span { -webkit-line-clamp: 3; -webkit-box-orient: vertical; display: -webkit-box; overflow: hidden; }
+			}
+			.cell.c-longText.isEditing {
+				.cellContent { padding: 5px 8px !important; }
 			}
 
 			.icon.fav { margin: 5px 0px 0px 0px; background-image: url('~img/icon/fav0.svg'); cursor: pointer; flex-shrink: 0; }
