--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -35,17 +35,17 @@
 			.cellContent { position: static; padding: 4px 8px !important; }
 		}
 
-		.cell.isEditing.c-select {
-			.cellContent { height: auto !important; padding-bottom: 0px !important; }
-		}
-
-		.cell.isEditing.c-object{
+		.cell.isEditing.c-object {
 			.cellContent { height: auto !important; padding-bottom: 4px !important; }
 		}
 
-		.cell.c-select { padding-bottom: 0px !important; }
+		.cell.c-select { padding: 3px 8px 1px 8px !important; }
 		.cell.c-select {
 			.tagItem { margin: 2px 6px 4px 0px; }
+		}
+		.cell.isEditing.c-select { padding: 0px !important; }
+		.cell.isEditing.c-select {
+			.cellContent { height: auto !important; padding: 2px 7px 0px 7px !important; }
 		}
 
 		.cell.isEditing.c-longText, .cell.isEditing.c-file { 
