--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -11,7 +11,7 @@
 		.item {
 			.name { @include text-overflow-nw; }
 		}
-		.item:hover::before { opacity: 0.15; }
+		.item:hover::before { background: rgba(172, 169, 150, 0.15); }
 		.item.isReadOnly:hover::before { opacity: 0; }
 	}
 	.menu.menuBlockMore.fromIndex { width: 230px; }
