--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -72,16 +72,16 @@
 		.item.isReadOnly { cursor: default; }
 		
 		.item::before {
-			content: ""; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: $colorDarkGrey; z-index: 1;
-			opacity: 0; transition: $transitionFast; pointer-events: none;
+			content: ""; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: rgba(172, 169, 150, 0); z-index: 1;
+			transition: background 0.2s ease-in-out; pointer-events: none;
 		}
-		.item.hover::before { opacity: 0.15; }
+		.item.hover::before { background: rgba(172, 169, 150, 0.15); }
 		.item.hover, .item:hover {
 			.icon.delete, .icon.more { opacity: 1; }
 		}
 		.item.isReadOnly.hover::before { opacity: 0; }
 
-		.item.active::before { opacity: 0.15; z-index: 0; }
+		.item.active::before { background: rgba(172, 169, 150, 0.15); z-index: 0; }
 		.item.active {
 			.name { z-index: 1; }
 		}
