--- a/src/scss/menu/dataview/common.scss
+++ b/src/scss/menu/dataview/common.scss
@@ -13,7 +13,7 @@
 	.menu.menuDataviewFilter,
 	.menu.menuDataviewSort,
 	{
-        .item:hover::before { opacity: 0.15; }
+        .item:hover::before { background: rgba(172, 169, 150, 0.15); }
 		.item {
 			.icon.plus { margin-right: 4px; }
 			.icon.dnd { margin-right: 2px; }
