--- a/src/scss/menu/dataview/media.scss
+++ b/src/scss/menu/dataview/media.scss
@@ -14,7 +14,7 @@
 		.item:hover, .item.active {
 			.clickable { width: calc(100% - 46px); }
 		}
-		.item:hover::before { opacity: 0.15; }
+		.item:hover::before { background: rgba(172, 169, 150, 0.15); }
 		.item.active {
 			.icon.more { opacity: 1; background-color: rgba(172, 169, 150, 0.15); }
 		}
