--- a/src/scss/menu/thread.scss
+++ b/src/scss/menu/thread.scss
@@ -27,7 +27,7 @@
 	.menu.menuThreadList {
 		.content { padding: 0px; }
 		.item { padding: 11px 16px; border-bottom: 1px solid #eae9e0;}
-		.item:hover::before { opacity: 0.15; }
+		.item:hover::before { background: rgba(172, 169, 150, 0.15); }
 		.item:last-child { border: 0px; }
 
 		.item {
