--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -15,9 +15,13 @@
 		transition: opacity 0.05s ease-in-out, transform 0.05s ease-in-out;
 	}
 	.menu.noAnimation { transition: none; }
-	.menu.show { opacity: 1; transform: scale3d(1,1,1); }
 	.menu.fixed { position: fixed; }
 	.menu * { user-select: none; }
+
+	.menu.show { opacity: 1; transform: scale3d(1,1,1); }
+	.menu.show {
+		.content { opacity: 1 !important; }
+	}
 	
 	.menu.v1.h3 { transform-origin: 0% 100%; } /* left top */
 	.menu.v2.h3 { transform-origin: 0% 0%; } /* left bottom */
@@ -37,7 +41,7 @@
 	
 	.menu.vertical { width: 224px; }
 	.menu.vertical {
-		.content { overflow-y: auto; max-height: 450px; padding: 8px 0px; border-radius: inherit; transform: none; }
+		.content { overflow-y: auto; max-height: 450px; padding: 8px 0px; border-radius: inherit; transform: none; opacity: 0; transition: opacity 0.2s ease-in-out; }
 		.ReactVirtualized__Grid__innerScrollContainer { margin: 8px 0px; }
 
 		.loaderWrapper { 
