--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -44,7 +44,6 @@
 	.icon.add { background-image: url('~img/icon/header/add.svg'); }
 	.icon.settings { background-image: url('~img/icon/header/settings.svg'); }
 	.icon.relation { background-image: url('~img/icon/header/relation.svg'); }
-	.icon.new-set { background-image: url('~img/icon/header/set.svg'); }
 	.icon.expand { background-image: url('~img/icon/header/expand.svg'); }
 
 	.side { position: absolute; top: 5px; height: 28px; line-height: 28px; }
@@ -55,7 +54,7 @@
 
 	.side.right { right: 6px; z-index: 1; }
 	.side.right {
-		.sync { margin-right: 8px; cursor: pointer; }
+		.sync { margin: 5px 8px 0px 0px; cursor: pointer; vertical-align: top; }
 		.icon { margin: 0px; }
 	}
 }
@@ -78,7 +77,7 @@
 	.icon.big:hover, .icon.big.active { background-color: #f3f2ec; }
 
 	.path { 
-		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px; margin-right: 6px;
+		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px;
 		line-height: 24px; width: 100%; text-align: center; transition: $transitionFast; -webkit-app-region: no-drag;
 	}
 	.path {
@@ -93,8 +92,7 @@
 	}
 
 	.side.center {
-		.icon.new-set { width: 20px; height: 20px; opacity: 1; transition: none; margin-right: 4px; }
-		.icon.new-set:hover { background-color: transparent; }
+		.icons { margin-left: 6px; display: inline-block; vertical-align: middle; }
 
 		.icon { margin: 0px; opacity: 0; }
 		.icon.plus {
@@ -160,7 +158,7 @@ body.fullScreen {
 	}
 }
 
-.header.headerMainEdit:hover, .header.headerMainEdit.active {
+.header.headerMainEdit:hover, .header.headerMainEdit.active, .header.headerMainEdit.show {
 	.side.left { opacity: 1; }
 	.side.center {
 		.icon { opacity: 1; }
