--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -136,7 +136,7 @@
 			}
 			.select:hover, .select.active { background: none; }
 			
-			.icon.codeWrap { width: 20px; height: 20px; background-color: rgba(0, 0, 255, 0.1); }
+			.icon.codeWrap { width: 20px; height: 20px; }
 		}
 	}
 
