--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -17,13 +17,17 @@ html.debug {
 		.block.blockLayout.c1 { border-color: rgba(0,0,255,0.3); }
 		
 		.block.blockLayout.c2 { border-width: 2px; border-color: rgba(0,255,0,0.3); }
+
+		.block.blockRelation {
+			.info { background: rgba(172,169,150,0.1); }
+			.cell { background: rgba(172,169,150,0.1); }
+		}
+
+		.block.blockText.code {
+			.icon.codeWrap { background-color: rgba(0, 0, 255, 0.1); }
+		}
 	}
 
-	.blocks .block.blockRelation {
-		.info { background: rgba(172,169,150,0.1); }
-		.cell { background: rgba(172,169,150,0.1); }
-	}
-	
 	.blockLast { background: rgba(0,0,255,0.1); }
 	
 	.focusable.isFocused { border: 1px dotted green; }
