--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -11,8 +11,6 @@
 			width: 100%; height: 100%; cursor: text; pointer-events: none;
 		}
 
-		.additional { display: none; }
-		
 		lnk { cursor: pointer; color: inherit; border-bottom: 1px solid $colorDarkGrey; text-decoration: none; }
 		
 		kbd { display: inline; font-family: 'Plex'; border-radius: 2px; background: rgba(172,169,150,0.15); }
@@ -113,7 +111,7 @@
 	.block.blockText.quote { padding: 6px 0px 6px 0px; }
 	.block.blockText.quote > .wrapContent > .selectable > .dropTarget { @include text-quote; padding: 2px 0px 3px 0px; }
 	.block.blockText.quote > .wrapContent > .selectable > .dropTarget mention .space { width: 5px; height: 26px; }
-	.block.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .line { 
+	.block.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .additional > .line { 
 		width: 0px; height: calc(100% + 5px); position: absolute; left: 11px; top: -2px; border-left: 2px solid $colorOrange; 
 	}
 	.block.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .wrap { padding-left: 28px; }
@@ -126,7 +124,7 @@
 	.block.blockText.code { padding: 6px 0px; }
 	.block.blockText.code > .wrapContent > .selectable > .dropTarget { padding: 41px 16px 16px 16px; background: rgba(247,245,240,0.5); }
 	.block.blockText.code > .wrapContent > .selectable > .dropTarget > .flex { position: static; } 
-	.block.blockText.code {
+	.block.blockText.code > .wrapContent > .selectable > .dropTarget > .flex {
 		.value { font-family: 'Plex'; @include text-common; tab-size: 4; }
 		.additional { position: absolute; top: 9px; left: 16px; z-index: 1; display: block; }
 		.additional {
