CU-f52tmv: Fix ObjectType emoji setting + refactoring

--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -99,6 +99,4 @@
 
 .iconObject.isUser { border-radius: 100%; }
 
-.iconObject.isTask.canEdit {
-	.iconCheckbox { cursor: pointer; }
-}
+.iconObject.canEdit { cursor: pointer; }
