--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -32,7 +32,7 @@
 
 		.cell.isEditing { padding: 0px !important; }
 		.cell.isEditing {
-			.cellContent { position: static; padding: 4px 8px !important; }
+			.cellContent { position: static; padding: 5px 8px !important; min-height: 32px; }
 		}
 
 		.cell.isEditing.c-object {
@@ -109,8 +109,14 @@
 		.item {
 			.icon.plus { margin-right: 4px; }
 
-			.info { height: 32px; padding: 6px 6px 6px 2px; border-radius: 4px; transition: background 0.2s ease-in-out; flex-shrink: 0; }
+			.info { padding: 5px 2px; border-radius: 4px; transition: background 0.2s ease-in-out; flex-shrink: 0; }
 			.info:hover { background: rgba(172,169,150,0.15); }
+			.info {
+				.name {
+					display: inline-block; vertical-align: top; @include text-common; line-height: 20px; @include text-overflow-nw; 
+					width: calc(100% - 24px); color: #6c6a5f;
+				}
+			}
 
 			.cell { padding: 5px 8px; margin-right: 6px; border-radius: 4px; width: calc(100% - 218px); transition: background 0.2s ease-in-out; }
 			.cell:hover { background: rgba(172,169,150,0.15); }
@@ -128,6 +134,10 @@
 			}
 			.cell.c-longText.isEditing {
 				.cellContent { padding: 5px 8px !important; }
+			}
+
+			.cell.isEditing.c-longText, .cell.isEditing.c-file { 
+				.cellContent { visibility: hidden; }
 			}
 
 			.icon.fav { margin: 5px 0px 0px 0px; background-image: url('~img/icon/fav0.svg'); cursor: pointer; flex-shrink: 0; }
