--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -20,7 +20,7 @@
 			.tagItem:last-child { margin-right: 0px; }
 
 			.iconObject { vertical-align: middle; margin-right: 6px; }
-			.name { vertical-align: middle; line-height: inherit; }
+			.name { vertical-align: middle; line-height: inherit; display: inline; word-break: break-word; }
 		}
 	}
 }
