CU-g98b8u: Longtext fixes

--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -57,7 +57,7 @@
 		}
 
 		.cell.isEditing.c-longText, .cell.isEditing.c-file { 
-			.cellContent { box-shadow: 0px 0px; border: 0px; visibility: hidden; }
+			.cellContent { box-shadow: 0px 0px; border: 0px; padding: 5px 8px; }
 		}
 	}
 }
