--- a/src/scss/menu/dataview/text.scss
+++ b/src/scss/menu/dataview/text.scss
@@ -1,9 +1,9 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuDataviewText { border-radius: 4px; box-shadow: 0px 0px 0px 2px $colorOrange inset; }
+	.menu.menuDataviewText { box-shadow: 0px 0px; }
 	.menu.menuDataviewText {
-		.content { overflow: visible; padding: 14px; max-height: none; transition: none; }
+		.content { overflow: visible; padding: 14px; max-height: none; box-shadow: 0px 0px 0px 2px $colorOrange inset; border-radius: 4px; }
 		.textarea { @include text-common; padding: 0px; overflow: auto; font-family: 'Inter'; height: auto; width: 100%; background: #fff; z-index: 1; white-space: normal; }
 	}
 	.menu.menuDataviewText.fromBlock {
