--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -94,7 +94,7 @@
 
 			.cell.isEditing { padding: 0px; }
 			.cell.isEditing {
-				.cellContent { position: static; height: auto !important; min-height: 30px; }
+				.cellContent { position: relative; height: auto !important; min-height: 30px; }
 				.cellContent.isName .input { height: 20px; line-height: 20px; }
 				.icon.clear { right: 8px; }
 			}
