--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -90,7 +90,7 @@
 			.cell { padding: 5px 8px; margin-right: 6px; border-radius: 4px; width: calc(100% - 218px); line-height: 22px; transition: background 0.2s ease-in-out; }
 			.cell:hover { background: rgba(172,169,150,0.15); }
 
-			.cell.c-select { padding-bottom: 0px; }
+			.cell.c-select { padding: 7px 8px 0px 8px; }
 
 			.cell.isEditing { padding: 0px; }
 			.cell.isEditing {
@@ -100,7 +100,7 @@
 			}
 
 			.cell.isEditing.c-select {
-				.cellContent { padding: 5px 8px 0px 8px; }
+				.cellContent { padding: 7px 8px 0px 8px; }
 			}
 
 			.cell.isEditing.c-shortText, 
