--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -26,7 +26,10 @@
 		.cell { @include text-common; width: calc(100% - 216px); position: relative; padding: 5px 8px; border-radius: 4px; transition: background 0.2s ease-in-out; }
 		.cell:hover { background: rgba(172,169,150,0.15); }
 		
-		.cell.c-select { padding: 7px 8px 0px 8px; }
+		.cell.c-select { padding: 4px 8px; }
+		.cell.c-select {
+			.tagItem { margin: 3px 6px 3px 0px; } 
+		}
 
 		.cell.isEditing { padding: 0px; }
 		.cell.isEditing {
@@ -36,7 +39,10 @@
 		}
 
 		.cell.isEditing.c-select {
-			.cellContent { padding: 7px 8px 0px 8px; }
+			.cellContent { padding: 4px 8px; }
+		}
+		.cell.isEditing.c-select.isStatus {
+			.over { width: calc(100% - 26px); }
 		}
 
 		.cell.isEditing.c-shortText, 
