screenshots for templates

--- a/src/scss/popup/store.scss
+++ b/src/scss/popup/store.scss
@@ -78,6 +78,15 @@
 					.line { bottom: -16px; }
 				}
 
+				.item.template { margin: 0px 24px 28px 0px; width: 304px; height: 252px; }
+				.item.template:nth-child(3n + 3) { margin-right: 0px; }
+				.item.template {
+					.img { 
+						width: 100%; height: 180px; background: $colorDarkGrey; background-repeat: no-repeat; background-size: cover; 
+						background-position: center center; border-radius: 8px; margin-bottom: 12px;
+					}
+				}
+
 				.item.relation { width: 300px; padding-left: 60px; height: 48px; margin: 0px 30px 16px 0px; line-height: 48px; }
 				.item.relation:nth-child(3n + 3) { margin-right: 0px; }
 				.item.relation {
