--- a/src/scss/popup/page.scss
+++ b/src/scss/popup/page.scss
@@ -3,5 +3,51 @@
 .popups {
 	.popup.popupPage {
 		.innerWrap { width: 960px; height: calc(100% - 128px); padding: 0px; }
+
+		.pageMainEdit {
+			.header { position: absolute; padding: 0px; border-radius: 12px 12px 0px 0px; top: 0px !important; }
+			.header {
+				.menu { right: 0px; top: 0px; }
+			}
+
+			#bodyWrapper > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
+			
+			.content { height: 100%; padding-top: 38px; }
+			.content > .wrap { height: 100%; }
+
+			.selection { height: 100%; overflow-x: hidden; overflow-y: scroll; }
+			.editor { margin-top: 38px; }
+
+			.editorWrapper.isSet { width: calc(100% - 96px); }
+			.editorWrapper.isSet {
+				.block.blockCover {
+					.elements { width: 100%; left: 0px; }
+					.elements {
+						.buttons { padding-left: 142px; }
+					}
+				}
+			}
+
+			.editorWrapper.withCover { padding-top: 318px; }
+			.editorWrapper.withIconAndCover { padding-top: 194px; }
+			.editorWrapper.withIconAndCover {
+				.block.blockCover {
+					.elements {
+						.buttons { padding-left: 118px; }
+					}
+				}
+			}
+
+			.editorWrapper.isHuman.withIconAndCover {
+				.block.blockCover {
+					.elements {
+						.buttons { padding-left: 150px; }
+					}
+				}
+			}
+
+			.block.blockCover { top: 0px; }
+		}
+
 	}	
 }
