--- a/src/scss/page/main/store.scss
+++ b/src/scss/page/main/store.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .pageMainStore {
-	.wrapper { height: 100%; width: 960px; margin: 0px 0px 0px -480px; position: absolute; left: 50%; top: 0px; }
+	.wrapper { height: 100%; width: 1000px; margin: 0px 0px 0px -480px; position: absolute; left: 50%; top: 0px; }
 
 	.content { height: 100%; padding-top: 40px; }
 
@@ -44,7 +44,7 @@
 
 		.loaderWrapper { position: relative; }
 
-		.ReactVirtualized__List { padding: 48px 0px; }
+		.ReactVirtualized__List { padding: 48px 20px 48px 20px; }
 
 		.items { height: 100%; }
 		.items {
