CU-g98fkm: Popup history

--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -109,8 +109,12 @@
 	.header.headerMainEdit {
 		.side.left { opacity: 1; left: 14px; }
 		.side.left {
-			.item { cursor: pointer; color: #6c6a5f; }
-			.icon { width: 20px; height: 20px; margin-right: 4px; border-radius: 0px; vertical-align: middle; }
+			.btn { cursor: pointer; color: #6c6a5f; display: inline-block; vertical-align: top; border-radius: 6px; padding: 0px 10px; height: 28px; line-height: 26px; }
+			.btn:hover { background-color: #f3f2ec; }
+			.btn {
+				.icon { width: 20px; height: 20px; margin-right: 4px; border-radius: 0px; vertical-align: middle; }
+				.txt { line-height: 20px; }
+			}
 		}
 		.side.center { opacity: 1; }
 		.path { border: 0px; cursor: default !important; }
