--- a/src/scss/popup/page.scss
+++ b/src/scss/popup/page.scss
@@ -28,6 +28,8 @@
 				}
 			}
 
+			.editorWrapper.withIcon { padding-top: 84px; }
+
 			.editorWrapper.withCover { padding-top: 318px; }
 			.editorWrapper.withIconAndCover { padding-top: 194px; }
 			.editorWrapper.withIconAndCover {
