--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -57,11 +57,12 @@
 		.icon.clock { background-image: url('~img/icon/menu/action/clock0.svg'); }
 		.icon.settings { background-image: url('~img/icon/menu/action/settings0.svg'); }
 		.icon.expand { background-image: url('~img/icon/menu/action/expand0.svg'); }
+		.icon.template { background-image: url('~img/icon/menu/action/template0.svg'); }
 
 		.icon.align.left { background-image: url('~img/icon/menu/align/left.svg'); }
 		.icon.align.center { background-image: url('~img/icon/menu/align/center.svg'); }
 		.icon.align.right { background-image: url('~img/icon/menu/align/right.svg'); }
-		
+
 		.icon.color {
 			.inner { 
 				width: 16px; height: 16px; position: absolute; left: 50%; top: 50%; margin: -8px 0px 0px -8px; border-radius: 100%;
