--- a/src/scss/component/selection.scss
+++ b/src/scss/component/selection.scss
@@ -3,6 +3,5 @@
 .selection { position: relative; user-select: none; }
 .selection * { user-select: none; }
 #selection-rect { 
-	border: 1px dotted $colorBlack; position: absolute; left: 0px; top: 0px; width: 0px; height: 0px; display: none; z-index: 102;
-	opacity: 0; 
+	border: 1px dotted $colorBlack; position: absolute; left: 0px; top: 0px; width: 0px; height: 0px; display: none; z-index: 102; opacity: 0; 
 }
