--- a/src/scss/component/progress.scss
+++ b/src/scss/component/progress.scss
@@ -2,12 +2,12 @@
 
 .progress { 
 	position: fixed; left: 0px; top: 0px; z-index: 110; width: 100%; height: 100%; background: rgba(0,0,0,0.4);
-	transition: background 0.05s ease-in-out; 
+	transition: background 0.05s ease-in-out; pointer-events: none;
 }
 
-.progress.isUnlocked { background: none; height: auto; }
+.progress.isUnlocked { background: none; }
 .progress.isUnlocked {
-	.inner { left: auto; right: 10px; top: 40px; margin: 0px; }
+	.inner { top: auto; left: 10px; bottom: 10px; margin: 0px; }
 }
 
 .progress {
