--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -8,7 +8,7 @@
 		}
 		.cellHead {
 			.cellContent { cursor: grab; }
-			.icon { width: 20px; height: 20px; margin: 0px 4px 0px 0px; vertical-align: top; }
+			.icon { width: 20px; height: 20px; margin: 0px 4px 0px 0px; vertical-align: top; flex-shrink: 0; }
 			.name { 
 				display: inline-block; line-height: 20px; height: 20px; vertical-align: top; width: calc(100% - 24px); 
 				@include text-overflow-nw;
