--- a/src/scss/popup/page.scss
+++ b/src/scss/popup/page.scss
@@ -10,6 +10,8 @@
 				.menu { right: 0px; top: 0px; }
 			}
 
+			.footer { display: none; }
+
 			#bodyWrapper > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
 			
 			.content { height: 100%; padding-top: 38px; }
