--- a/src/scss/component/progress.scss
+++ b/src/scss/component/progress.scss
@@ -7,7 +7,7 @@
 
 .progress.isUnlocked { background: none; }
 .progress.isUnlocked {
-	.inner { top: auto; left: 10px; bottom: 10px; margin: 0px; }
+	.inner { top: auto; left: 10px; top: 40px; margin: 0px; }
 }
 
 .progress {
