--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -41,13 +41,10 @@
 	.elements {
 		.buttons { position: absolute; left: 0px; bottom: 8px; }
 		
-		.dragWrap { 
-			width: 160px; height: 24px; background: rgba(0,0,0,0.5); position: absolute; left: 50%; bottom: 8px; margin-left: -80px;
-			border-radius: 4px; padding: 0px 8px; display: flex; 
-		}
+		.dragWrap { width: 160px; position: absolute; left: 50%; bottom: 8px; margin-left: -80px; display: flex; }
 		.dragWrap {
-			.input-drag { width: 96px; margin-right: 8px; }
-			.number { width: calc(100% - 106px); font-size: 14px; color: #fff; font-weight: 500; text-align: right; }
+			.input-drag { width: 96px; }
+			.number { width: calc(100% - 106px); }
 		}
 	
 		.btn { 
