--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -85,7 +85,7 @@
 
 	.block.blockText > .wrapContent > .selectable > .dropTarget { padding: 3px 0px; }
 
-	.block.blockText.title { padding: 10px 0px 22px 0px; font-size: 36px; line-height: 44px; letter-spacing: -0.48px; font-weight: 600; }
+	.block.blockText.title { padding: 10px 0px 22px 0px; @include text-title; }
 	.block.blockText.title {
 		.placeHolder { 
 			color: $colorDarkGrey; position: absolute; z-index: 0; left: 0px; top: 0px; display: none; overflow: hidden; 
@@ -95,6 +95,9 @@
 	}
 	.block.blockText.title > .wrapContent > .selectable > .dropTarget { padding: 4px 0px 2px 0px; }
 	.block.blockText.title > .wrapContent > .selectable > .selectionOver { display: none; }
+
+	.block.blockText.description { @include text-description; }
+	.block.blockText.description > .wrapContent > .selectable > .selectionOver { display: none; }
 
 	.block.blockText.header1 { padding: 22px 0px 0px 0px; }
 	.block.blockText.header1 > .wrapContent > .selectable > .dropTarget { @include text-header1; padding: 4px 0px 2px 0px; }
