BlockFeatured from middle

--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .blocks {
-	.block.blockFeatured { @include text-paragraph; color: #6c6a5f; white-space: nowrap; padding: 2px 0px 30px 0px; }
+	.block.blockFeatured { @include text-paragraph; color: #6c6a5f; white-space: nowrap; padding: 2px 0px 30px 0px; display: none; }
 	.block.blockFeatured {
 		.wrapMenu { visibility: hidden; }
 		.wrap { white-space: normal; }
@@ -23,4 +23,8 @@
 			.name { vertical-align: middle; line-height: inherit; display: inline; word-break: break-word; }
 		}
 	}
+}
+
+html.withDataview {
+	.blocks .block.blockFeatured { display: block; }
 }
