--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -3,7 +3,6 @@
 .blocks {
 	.block.blockFeatured { @include text-paragraph; color: #6c6a5f; white-space: nowrap; padding: 2px 0px 30px 0px; display: none; }
 	.block.blockFeatured {
-		.wrapMenu { visibility: hidden; }
 		.wrap { white-space: normal; }
 
 		.bullet { width: 4px; height: 4px; border-radius: 100%; background: #6c6a5f; display: inline-block; vertical-align: middle; margin: 0px 10px; }
@@ -26,5 +25,5 @@
 }
 
 html.withDataview {
-	.blocks .block.blockFeatured { display: block; }
+	.blocks .block.blockFeatured { display: flex; }
 }
