CU-gz7y9p: MouseOver in BlockAdd menu

--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -54,6 +54,8 @@
 
 			.icon.relation { background-image: url('~img/icon/menu/action/block/relation1.svg'); }
 		}
+
+		.icon.arrow { width: 20px !important; height: 20px !important; background-color: unset !important; left: auto !important; top: 50% !important; }
 	}
 }
 
