CU-gz5vau: new design

--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -42,6 +42,7 @@
 		.icon.remove { background-image: url('~img/icon/menu/action/remove0.svg'); }
 		.icon.more { background-image: url('~img/icon/menu/action/more0.svg'); }
 		.icon.download { background-image: url('~img/icon/menu/action/download0.svg'); }
+		.icon.upload { background-image: url('~img/icon/menu/action/upload0.svg'); }
 		.icon.rename { background-image: url('~img/icon/menu/action/rename0.svg'); }
 		.icon.replace { background-image: url('~img/icon/menu/action/replace0.svg'); }
 		.icon.add { background-image: url('~img/icon/menu/action/add0.svg'); }
