--- a/src/scss/menu/dataview/media.scss
+++ b/src/scss/menu/dataview/media.scss
@@ -1,11 +1,10 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuDataviewMedia { border-radius: 2px; box-shadow: 0px 0px 0px 2px $colorOrange;  }
 	.menu.menuDataviewMedia {
 		.content { padding-bottom: 0px; }
 
-		.item { display: flex; }
+		.item { display: flex; color: $colorDarkGrey; }
 		.item {
 			img { display: block; max-width: 100%; max-height: 208px; object-fit: contain; }
 			.name { line-height: 20px; width: calc(100% - 26px); @include text-overflow-nw; }
@@ -19,7 +18,6 @@
 			.icon.more { opacity: 1; background-color: rgba(172, 169, 150, 0.15); }
 		}
 
-		.item.add { padding: 14px 16px; border-top: 1px solid #e0ded2; }
-		.inputWithFile { border: 0px; padding: 0px; }
+		.section:last-child { padding-bottom: 8px; }
 	}
 }
