--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -81,6 +81,8 @@
 	}
 	.block.blockText.isReadOnly.code > .wrapContent > .selectable > .dropTarget { padding: 16px; }
 
+	.block.blockText.description.isReadOnly { display: none; }
+
 	.block.blockText.isChecked > .wrapContent > .selectable > .dropTarget * { color: $colorDarkGrey !important; }
 
 	.block.blockText > .wrapContent > .selectable > .dropTarget { padding: 3px 0px; }
