--- a/src/scss/component/inputWithFile.scss
+++ b/src/scss/component/inputWithFile.scss
@@ -15,7 +15,7 @@
 
 	#form { display: inline-block; vertical-align: top; }
 	#form > span { display: inline-block; width: 100%; }
-	#url { height: 20px; line-height: 20px; vertical-align: top; padding: 0px; border: 0px; }
+	#url { height: 20px; line-height: 20px; vertical-align: top; padding: 0px; border: 0px; color: $colorBlack; }
 
 	.icon { width: 20px; height: 20px; margin: 0px 6px 0px 0px; transition: none; vertical-align: top; }
 	.icon.image { background-image: url('~img/icon/menu/action/block/image0.svg'); }
