--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -12,7 +12,7 @@
 		.cellContent > .wrap { display: inline; }
 		.cellContent.isName .name { display: inline; }
 		.cellContent {
-			.element { margin-bottom: 0px; vertical-align: middle; line-height: inherit; }
+			.element { margin-bottom: 0px; vertical-align: middle; line-height: inherit; background: none !important; }
 			.element:last-child { margin-right: 0px; }
 
 			.tagItem { margin-right: 6px; }
