--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -57,7 +57,7 @@
 		}
 
 		.cell.c-object {
-			.element { margin-top: 1px; margin-bottom: 1px; }
+			.element { margin-top: 1px; margin-bottom: 1px; background: none !important; }
 		}
 		.cell.isEditing.c-object {
 			.cellContent { padding: 5px 8px 3px 8px !important; }
